packages/next-swc/crates/core/tests/errors/react-server-components/server-graph/client-only/output.js
// This is a comment.
'use strict';
/**
 * This is a comment.
 */ import 'client-only';
export default function() {
    return null;
}
